# nicegui-wire

./: .gitignore  ESP32.md  PROTOCOL.md  README.md  pyproject.toml
examples/: hello.py
nicegui_wire/: __init__.py  cli.py  fb_sim.py  html_parser.py  sio_client.py  sniffer.py  textual_app.py  tree.py
tests/: conftest.py  test_html_parser.py  test_tree.py  test_wire_e2e.py
