[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-wire"
version = "0.0.1"
description = "Network-level NiceGUI client. Speak the Socket.IO wire and HTML bootstrap of any running NiceGUI site; render it in a terminal or an ESP32-class framebuffer without ever importing NiceGUI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Evan Chan"}]
keywords = ["nicegui", "textual", "tui", "esp32", "socketio", "bridge"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-socketio[asyncio_client]>=5.11",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
tui = ["textual>=8.2"]
fb  = ["pygame-ce>=2.5"]
test = ["pytest>=8", "pytest-asyncio>=0.23", "nicegui>=3.10"]

[project.scripts]
ngwire = "nicegui_wire.cli:main"

[tool.setuptools.packages.find]
include = ["nicegui_wire*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
